Fixed padding on mobile

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -7,6 +7,10 @@
   overflow-x: hidden;
 }
 
+.App__contentWrapper {
+  padding: 1em 1em 4em 1em;
+}
+
 .App__headerTitle {
   font-size: 2em;
   font-weight: 700;
